--- a/index.html
+++ b/index.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
-	<title>M.E Telescope</title>
+	<title>Alfahad high School</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="Author" content="Abdalla,Abdulrhaman  " />
+	<meta name="Description" content="final project " />
+	<meta name="keywords" content="school webssite ">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
 	<header>
+
 		<div class="main">
+			<video src="pic/school2.mp4" loop autoplay muted id="myVideo"></video>
 			<div class="logo">
-				<img src="pic/0.png">
+				<img src="pic/logo6.png">
 			</div>
 			<ul>
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="page/Foods.html">Foods</a></li>
 				<li><a href="page/Places.html">Places</a></li>
- 				<li><a href="page/Music.html">Music</a></li>
+				<li><a href="page/Music.html">Music</a></li>
 				<li><a href="page/About.html">About</a></li>
 			</ul>
 		</div>
 		<div class="title">
-			<h1>Middle East Telescope</h1>
+			<center>
+				<h1>Alfahad High School</h1><br>
+				<h4>"Education is not the learning of facts, the training of the mind to think."
+					<br><br><br>
+					</h5>
+			</center>
 		</div>
-		
+
 		<div class="button">
 			<a href="page/About.html " class="btn">ABOUT US</a>
 		</div>
 
-		 
 	</header>
+
 </body>
+
+
 </html>
