--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
 <body>
 	<header>
-
 		<div class="main">
 			<video src="pic/school2.mp4" loop autoplay muted id="myVideo"></video>
 			<div class="logo">
 				<img src="pic/logo6.png">
 			</div>
-			<ul>
+			<ul class="niv">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="page/Foods.html">Foods</a></li>
 				<li><a href="page/Places.html">Places</a></li>
